--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,6 +21,14 @@ on:
         description: 'The commit hash to be used'
         required: false
         default: 'a16c8a76259ab870c07e5123c237b1900402d9a6'
+      VERSION:
+        description: 'The software version'
+        required: true
+        default: '1.9.0-jumbo-1+'  #TODO: edit before release (JUMBO_RELEASE)
+      tag:
+        description: 'The image tag'
+        required: true
+        default: 'latest'  #TODO: edit before release (JUMBO_RELEASE)
 
 env:
   REPO: ghcr.io/${{ github.repository_owner }}/john
@@ -38,6 +46,10 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date -u +'%Y-%m-%dT%H:%M:%S')"
+
       - name: Log in to GitHub Docker Registry
         uses: docker/login-action@v1
         with:
@@ -53,6 +65,10 @@ jobs:
           build-args: |
             release=${{ github.event.inputs.release }}
             commit=${{ github.event.inputs.hash }}
+            GIT_COMMIT=${{sha}}
+            BUILD_DATE=${{ steps.date.outputs.date }}
+            VERSION=${{ github.event.inputs.VERSION }}
+
           tags: |
-            ${{ env.REPO }}:latest
-            ${{ env.REPO }}:latest_J${{ github.run_number }}
+            ${{ env.REPO }}:${{ github.event.inputs.tag }}
+            ${{ env.REPO }}:${{ github.event.inputs.tag }}_J${{ github.run_number }}
