--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,6 +24,10 @@ on:
       VERSION:
         description: 'The software version'
         required: true
+        default: '1.9.01'  #TODO: edit before release (JUMBO_RELEASE)
+      VERSION_NAME:
+        description: 'The software version name'
+        required: true
         default: '1.9.0-jumbo-1+'  #TODO: edit before release (JUMBO_RELEASE)
       tag:
         description: 'The image tag'
@@ -48,7 +52,7 @@ jobs:
 
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date -u +'%Y-%m-%dT%H:%M:%S')"
+        run: echo "::set-output name=date::$(date -u)"
 
       - name: Log in to GitHub Docker Registry
         uses: docker/login-action@v1
@@ -65,9 +69,9 @@ jobs:
           build-args: |
             release=${{ github.event.inputs.release }}
             commit=${{ github.event.inputs.hash }}
-            GIT_COMMIT=${{sha}}
             BUILD_DATE=${{ steps.date.outputs.date }}
             VERSION=${{ github.event.inputs.VERSION }}
+            VERSION_NAME=${{ github.event.inputs.VERSION_NAME }}
 
           tags: |
             ${{ env.REPO }}:${{ github.event.inputs.tag }}
