--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,15 +1,15 @@
 name: john-the-ripper
-version: rolling-2210       #TODO: edit before release (JUMBO_RELEASE)
+version: rolling-2304       #TODO: edit before release (JUMBO_RELEASE)
 version-script: |
   ./package_version.sh
 
 confinement: strict
-grade: stable            #TODO: [stable or devel] edit before release (JUMBO_RELEASE)
+grade: stable               #TODO: [stable or devel] edit before release (JUMBO_RELEASE)
 assumes: [ snapd2.38 ]
 base: core18
 
 license: GPL-2.0
-#title: John the Ripper Community Edition
+title: John the Ripper Community Edition
 summary: John the Ripper "Jumbo" password cracker
 description: |
   John the Ripper is a fast password cracker, currently available for many flavors
