--- a/metadata/com.openwall.John.desktop
+++ b/metadata/com.openwall.John.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
-Version=1.9.0J2
+Version=1.5
 Type=Application
-Terminal=1
+Terminal=true
 Name=John the Ripper Community Edition
 GenericName=John the Ripper Jumbo
 Comment=John the Ripper "Jumbo" password cracker
@@ -9,4 +9,3 @@ TryExec=john
 Exec=john --test=0
 Icon=com.openwall.John
 Categories=Security
-
