--- a/cloud-tool/Dockerfile
+++ b/cloud-tool/Dockerfile
@@ -1,5 +1,14 @@
-######################################################################
-# Copyright (c) 2021 Claudio André <claudioandre.br at gmail.com>
+###############################################################################
+#        _       _             _   _            _____  _
+#       | |     | |           | | | |          |  __ \(_)
+#       | | ___ | |__  _ __   | |_| |__   ___  | |__) |_ _ __  _ __   ___ _ __
+#   _   | |/ _ \| '_ \| '_ \  | __| '_ \ / _ \ |  _  /| | '_ \| '_ \ / _ \ '__|
+#  | |__| | (_) | | | | | | | | |_| | | |  __/ | | \ \| | |_) | |_) |  __/ |
+#   \____/ \___/|_| |_|_| |_|  \__|_| |_|\___| |_|  \_\_| .__/| .__/ \___|_|
+#                                                       | |   | |
+#                                                       |_|   |_|
+#
+# Copyright (c) 2021-2023 Claudio André <claudioandre.br at gmail.com>
 #
 # This program comes with ABSOLUTELY NO WARRANTY; express or implied.
 #
@@ -7,7 +16,9 @@
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation, as expressed in version 2, seen at
 # http://www.gnu.org/licenses/gpl-2.0.html
-######################################################################
+###############################################################################
+# Dockerfile for a cloud helper tool
+# More info at https://github.com/openwall/john-packages
 
 FROM ubuntu:latest
 LABEL maintainer Claudio André (c) 2021 1.0.Cloud Tools
