--- a/deploy/Mac_X86-Delivery.yml
+++ b/deploy/Mac_X86-Delivery.yml
@@ -26,12 +26,13 @@ jobs:
     macos:
       xcode: 14.2.0
     environment:
-      TARGET_ARCH : "MacOS"
+      TARGET_ARCH : "MacOS X86"
       EXTRA: "full;extra"
-      BUILD_OPTS: "--disable-native-tests --enable-simd=avx"
+      BUILD_OPTS: "--disable-native-tests"
       CC : "clang"
       TEST : "MacOS;"
       BASE : "Apple MacOS"
+      DEPLOY_PAK : "Yes"
 
     steps:
       - run:
@@ -39,26 +40,27 @@ jobs:
           command: |
             git clone --depth 10 https://github.com/openwall/john.git ~/tmp
             cp -r ~/tmp/. .
+
             wget https://raw.githubusercontent.com/claudioandre-br/JtR-CI/master/tests/tests-ci.sh -O .ci/tests-ci.sh
             chmod +x .ci/tests-ci.sh
+            .ci/tests-ci.sh "$TARGET_ARCH" INFO
       - run:
           name: Building JtR
-          command: .ci/tests-ci.sh $TARGET_ARCH BUILD
-      - run:
-          name: Testing JtR
-          command: .ci/tests-ci.sh $TARGET_ARCH TEST
-      - run:
-          name: Cleaning
-          command: rm -rf src .git .ci .circleci .azure .editorconfig .gitattributes .github .gitignore .mailmap .pre-commit.sh .travis .travis.yml && rm -rf run/ztex
+          command: |
+            .ci/tests-ci.sh "$TARGET_ARCH" BUILD
+            .ci/tests-ci.sh "$TARGET_ARCH" TEST
       - run:
           name: Saving package
           command: |
-            zip -vr -9 ../JtR.zip ./
-            sha256sum ../*.zip || true
+            wget https://raw.githubusercontent.com/claudioandre-br/JtR-CI/master/tests/clean_package.sh -O .ci/clean_package.sh
+            source .ci/clean_package.sh
+
+            7z a -t7z -m0=lzma -mx=9 -mfb=64 -md=128m -ms=on JtR-macX86.7z ./
+            sha256sum JtR-macX86.7z || true
 
       - store_artifacts:
-          path: ../JtR.zip
-          destination: JtR.zip
+          path: JtR-macX86.7z
+          destination: JtR-macX86.7z
 
 workflows:
   version: 2
