--- a/deploy/snap/snapcraft.yaml
+++ b/deploy/snap/snapcraft.yaml
@@ -1,3 +1,25 @@
+###############################################################################
+#        _       _             _   _            _____  _
+#       | |     | |           | | | |          |  __ \(_)
+#       | | ___ | |__  _ __   | |_| |__   ___  | |__) |_ _ __  _ __   ___ _ __
+#   _   | |/ _ \| '_ \| '_ \  | __| '_ \ / _ \ |  _  /| | '_ \| '_ \ / _ \ '__|
+#  | |__| | (_) | | | | | | | | |_| | | |  __/ | | \ \| | |_) | |_) |  __/ |
+#   \____/ \___/|_| |_|_| |_|  \__|_| |_|\___| |_|  \_\_| .__/| .__/ \___|_|
+#                                                       | |   | |
+#                                                       |_|   |_|
+#
+# Copyright (c) 2019-2023 Claudio André <claudioandre.br at gmail.com>
+#
+# This program comes with ABSOLUTELY NO WARRANTY; express or implied.
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, as expressed in version 2, seen at
+# http://www.gnu.org/licenses/gpl-2.0.html
+###############################################################################
+# Recipe to create the snap package
+# More info at https://github.com/openwall/john-packages
+
 name: john-the-ripper
 version: bleeding
 
@@ -12,11 +34,15 @@ license: GPL-2.0
 title: John the Ripper CE Auditing Tool
 summary: John the Ripper "Jumbo" password cracker
 description: |
-  John the Ripper is a fast password cracker, currently available for many flavors
-  of Unix, Windows, DOS, BeOS, and OpenVMS. Its primary purpose is to detect weak
-  Unix passwords. Besides several crypt(3) password hash types most commonly found
-  on various Unix systems, supported out of the box are Windows LM hashes, plus lots
-  of other hashes and ciphers.
+  [Openwall's](http://openwall.com/) John the Ripper (JtR) is a fast password cracker,
+  currently available for many flavors of Unix and for Windows. Its primary
+  purpose is to detect weak Unix passwords. Besides several crypt(3) password hash
+  types most commonly found on various Unix systems, supported out of the box are
+  Windows LM hashes, various macOS password hashes, as well as many
+  non-hashes such as SSH private keys, encrypted filesystems such as macOS .dmg files
+  and "sparse bundles", encrypted archives such as ZIP, RAR, and 7z,
+  encrypted document files such as PDF and Microsoft Office's, plus lots of
+  other hashes and ciphers.
 
 icon: icon.png
 
