docs: general documentation update
Minor tweaks and adjustments. Make the readme file less cluttered and
cumbersome (move some text to docs and make reading faster and friendlier).

--- a/deploy/Mac_ARM-Delivery.yml
+++ b/deploy/Mac_ARM-Delivery.yml
@@ -44,6 +44,7 @@ macos_task:
     - wget https://raw.githubusercontent.com/claudioandre-br/JtR-CI/master/tests/tests-ci.sh -O .ci/tests-ci.sh
     - chmod +x .ci/tests-ci.sh
     - .ci/tests-ci.sh "$TARGET_ARCH" INFO
+    - echo  "$CIRRUS_TASK_ID" > Build._ID
 
   build_script:
     - .ci/tests-ci.sh "$TARGET_ARCH" BUILD
@@ -63,3 +64,6 @@ macos_task:
   always:
     binaries_artifacts:
       path: "JtR-macArm.7z"
+
+    id_artifacts:
+      path: "Build._ID"
