--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,7 +32,7 @@ on:
       hash:
         description: 'The commit hash to be used'
         required: false
-        default: '15b3b7c25fc8ac34f2504d53f0c94bbf4ec12596'
+        default: '15b3b7c25fc8ac34f2504d53f0c94bbf4ec12596'   #TODO: edit before release (JUMBO_RELEASE)
       VERSION:
         description: 'The software version'
         required: true
@@ -45,13 +45,17 @@ on:
         description: 'The image tag'
         required: true
         default: 'latest'  #TODO: edit before release (JUMBO_RELEASE) rolling
+      push:
+        description: 'Push the resulting image to Docker registry?'
+        required: true
+        default: 'true'
 
 env:
   REPO: ghcr.io/${{ github.repository_owner }}/john
 
 jobs:
   push_to_registry:
-    name: Push Docker image to a registry
+    name: Build Docker image
     runs-on: ubuntu-latest
 
     permissions:
@@ -76,7 +80,7 @@ jobs:
       - name: Build container image
         uses: docker/build-push-action@v2
         with:
-          push: true
+          push: ${{ github.event.inputs.push }}
           file: ../../Dockerfile
           build-args: |
             release=${{ github.event.inputs.release }}
