--- a/.github/workflows/virusscan.yml
+++ b/.github/workflows/virusscan.yml
@@ -30,11 +30,12 @@ jobs:
   virustotal:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: VirusTotal Scan
+      - name: VirusTotal Scan
         uses: crazy-max/ghaction-virustotal@v3
+
         with:
           vt_api_key: ${{ secrets.VT_API_KEY }}
+          update_release_body: true
           files: |
             .7z$
             .zip$
