--- a/.github/workflows/virusscan.yml
+++ b/.github/workflows/virusscan.yml
@@ -33,8 +33,8 @@ jobs:
     permissions:
       deployments: read
       packages: read
-      contents: read|write
-      statuses: write
+      contents: read|write # required to update the release status. But it is a secutiry issue.
+      statuses: read|write # required to update the release status. But it is a secutiry issue.
 
     runs-on: ubuntu-latest
     steps:
