--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -20,6 +20,7 @@
 # Github Action to run some linters
 # More info at https://github.com/openwall/john-packages
 
+---
 name: Linter
 
 on:
@@ -28,15 +29,12 @@ on:
   pull_request:
     branches: [main]
 
+permissions: read-all
+
 jobs:
   build:
     name: Lint Code Base
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
-      packages: read
-      statuses: write
 
     steps:
       - name: Checkout Code
