--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,6 +20,7 @@
 # Github Action to build John the Ripper's CPU Docker image
 # More info at https://github.com/openwall/john-packages
 
+---
 name: Docker Image
 
 on:
@@ -32,7 +33,8 @@ on:
       hash:
         description: 'The commit hash to be used'
         required: false
-        default: '15b3b7c25fc8ac34f2504d53f0c94bbf4ec12596'   #TODO: edit before release (JUMBO_RELEASE)
+        #TODO: edit before release (JUMBO_RELEASE)
+        default: '15b3b7c25fc8ac34f2504d53f0c94bbf4ec12596'
       VERSION:
         description: 'The software version'
         required: true
@@ -74,9 +76,9 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
 
-      - name: Get current date
+      - name: Current date
         id: date
-        run: echo "::set-output name=date::$(date -u)"
+        run: echo "name=$(date -u)" >> "$GITHUB_OUTPUT"
 
       - name: Log in to GitHub Docker Registry
         uses: docker/login-action@465a07811f14bebb1938fbed4728c6a1ff8901fc # v2.2.0
@@ -88,14 +90,15 @@ jobs:
       - name: Build container image
         uses: docker/build-push-action@2eb1c1961a95fc15694676618e422e8ba1d63825 # v4.1.1
         with:
+          context: "${{ github.workspace }}/deploy/docker"
+          platforms: linux/amd64 #,linux/arm64
           push: ${{ github.event.inputs.push }}
-          file: ../../Dockerfile
           build-args: |
-            release=${{ github.event.inputs.release }}
-            commit=${{ github.event.inputs.hash }}
-            BUILD_DATE=${{ steps.date.outputs.date }}
-            VERSION=${{ github.event.inputs.VERSION }}
-            VERSION_NAME=${{ github.event.inputs.VERSION_NAME }}
+            RELEASE="${{ github.event.inputs.release }}"
+            COMMIT="${{ github.event.inputs.hash }}"
+            BUILD_DATE="${{ steps.date.outputs.name }}"
+            VERSION="${{ github.event.inputs.VERSION }}"
+            VERSION_NAME="${{ github.event.inputs.VERSION_NAME }}"
 
           tags: |
             ${{ env.REPO }}:${{ github.event.inputs.tag }}
