--- a/IDE/.devcontainer/Dockerfile
+++ b/IDE/.devcontainer/Dockerfile
@@ -1,16 +1,14 @@
 # See here for image contents: https://github.com/microsoft/vscode-dev-containers/tree/master/containers
 
-# [Choice] Ubuntu version: bionic, focal
-ARG VARIANT="jammy"
-FROM mcr.microsoft.com/vscode/devcontainers/base:${VARIANT}
+FROM mcr.microsoft.com/vscode/devcontainers/base:jammy@sha256:3cb26c96497bfc785273ed8f2aa6983a68f26138dbf119b4444421d434037700
 
 # ** [Optional] Uncomment this section to install additional packages. **
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends \
-           build-essential libssl-dev zlib1g-dev libgmp-dev libpcap-dev libbz2-dev \
-           yasm pkg-config ocl-icd-opencl-dev opencl-headers \
-           gdb cpio \
-           libpocl-dev ocl-icd-libopencl1 pocl-opencl-icd \
+           build-essential=* libssl-dev=* zlib1g-dev=* libgmp-dev=* libpcap-dev=* libbz2-dev=* \
+           yasm=* pkg-config=* ocl-icd-opencl-dev=* opencl-headers=* \
+           gdb=* cpio=* \
+           libpocl-dev=* ocl-icd-libopencl1=* pocl-opencl-icd=* \
     #wget -q http://registrationcenter-download.intel.com/akdlm/irc_nas/vcp/13793/l_opencl_p_18.1.0.013.tgz -O /tmp/opencl_runtime.tgz && \
     #tar -xzf /tmp/opencl_runtime.tgz -C /tmp && \
     #sed 's/decline/accept/g' -i /tmp/l_opencl_p_18.1.0.013/silent.cfg && \
@@ -22,4 +20,5 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && rm -rf /var/lib/apt/lists/*
 
 USER vscode
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN curl --proto '=https' --tlsv1.3 https://sh.rustup.rs -sSf | bash -s -- -y
