--- a/IDE/.devcontainer/Dockerfile
+++ b/IDE/.devcontainer/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends \
            build-essential=* libssl-dev=* zlib1g-dev=* libgmp-dev=* libpcap-dev=* libbz2-dev=* \
            yasm=* pkg-config=* ocl-icd-opencl-dev=* opencl-headers=* \
-           gdb=* cpio=* \
+           gdb=* cpio=* pre-commit=* \
            libpocl-dev=* ocl-icd-libopencl1=* pocl-opencl-icd=* \
     #wget -q http://registrationcenter-download.intel.com/akdlm/irc_nas/vcp/13793/l_opencl_p_18.1.0.013.tgz -O /tmp/opencl_runtime.tgz && \
     #tar -xzf /tmp/opencl_runtime.tgz -C /tmp && \
