--- a/IDE/.devcontainer/Dockerfile
+++ b/IDE/.devcontainer/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
            yasm=* pkg-config=* ocl-icd-opencl-dev=* opencl-headers=* \
            gdb=* cpio=* pre-commit=* \
            libpocl-dev=* ocl-icd-libopencl1=* pocl-opencl-icd=* \
+           golang=* shellcheck=* \
     #wget -q http://registrationcenter-download.intel.com/akdlm/irc_nas/vcp/13793/l_opencl_p_18.1.0.013.tgz -O /tmp/opencl_runtime.tgz && \
     #tar -xzf /tmp/opencl_runtime.tgz -C /tmp && \
     #sed 's/decline/accept/g' -i /tmp/l_opencl_p_18.1.0.013/silent.cfg && \
