--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -59,14 +59,17 @@ permissions:
   contents: read
 
 jobs:
-  push_to_registry:
+  build:
     name: Build Docker image
     runs-on: ubuntu-latest
 
     permissions:
       packages: write
       contents: read
-      id-token: write # This is required for requesting the JWT
+
+    outputs:
+      image: ${{ env.REPO }}:${{ github.event.inputs.tag }}
+      digest: ${{ steps.build-and-push.outputs.digest }}
 
     steps:
       - name: Harden Runner
@@ -80,9 +83,6 @@ jobs:
       - name: Current date
         id: date
         run: echo "name=$(date -u)" >> "$GITHUB_OUTPUT"
-
-      - name: Install Cosign
-        uses: sigstore/cosign-installer@6e04d228eb30da1757ee4e1dd75a0ec73a653e06 # v3.1.1
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@465a07811f14bebb1938fbed4728c6a1ff8901fc # v2.2.0
@@ -108,10 +108,17 @@ jobs:
             ${{ env.REPO }}:${{ github.event.inputs.tag }}
             ${{ env.REPO }}:${{ github.event.inputs.tag }}_J${{ github.run_number }}
 
-      - name: Sign the Docker image
-        env:
-          TAGS: ${{ env.REPO }}:${{ github.event.inputs.tag }}
-          DIGEST: ${{ steps.build-and-push.outputs.digest }}
-        # This step uses the identity token to provision an ephemeral certificate
-        # against the sigstore community Fulcio instance.
-        run: cosign sign --yes "${TAGS}@${DIGEST}"
+  provenance:
+    if: ${{ github.event.inputs.push }} == 'true'
+    needs: [build]
+    permissions:
+      actions: read # for detecting the Github Actions environment.
+      id-token: write # for creating OIDC tokens for signing.
+      packages: write # for uploading attestations.
+    uses: slsa-framework/slsa-github-generator/.github/workflows/generator_container_slsa3.yml@v1.7.0
+    with:
+      image: ${{ needs.build.outputs.image }}
+      digest: ${{ needs.build.outputs.digest }}
+      registry-username: ${{ github.actor }}
+    secrets:
+      registry-password: ${{ secrets.GITHUB_TOKEN }}
