--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -44,7 +44,9 @@ jobs:
           egress-policy: block
           allowed-endpoints: >
             api.github.com:443
+            checkpoint-api.hashicorp.com:443
             github.com:443
+            raw.githubusercontent.com:443
 
       - name: Checkout Code
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4.0.0
