--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -57,5 +57,5 @@ jobs:
         uses: github/super-linter@45fc0d88288beee4701c62761281edfee85655d7 # v5.0.0
         env:
           VALIDATE_ALL_CODEBASE: false
-          DEFAULT_BRANCH: master
+          DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
