docs: let people know we are building using mac M2
Signed-off-by: Claudio André <claudioandre.br@gmail.com>

--- a/deploy/Mac_ARM-Delivery.yml
+++ b/deploy/Mac_ARM-Delivery.yml
@@ -22,7 +22,7 @@
 
 ---
 macOS_task:
-  name: macOS M1
+  name: macOS M2
   trigger_type: manual
   macos_instance:
     image: ghcr.io/cirruslabs/macos-ventura-xcode:latest
@@ -35,7 +35,7 @@ macOS_task:
     TARGET_ARCH: "macOS ARM"
     EXTRA: "full;extra"
     TEST: "macOS;"
-    BASE: "Apple macOS M1"
+    BASE: "Apple macOS M2"
     DEPLOY_PAK: "Yes"
 
   info_script:
@@ -50,7 +50,7 @@ macOS_task:
   build_script:
     - .ci/ci_controler.sh "$TARGET_ARCH" BUILD
 
-    # Format crash on M1
+    # Format crash on ARM
     - echo '[Local:Disabled:Formats]' >> run/john-local.conf
     - echo 'SunMD5 = Y' >> run/john-local.conf
     - .ci/ci_controler.sh "$TARGET_ARCH" TEST
