--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -77,9 +77,14 @@ jobs:
         with:
           egress-policy: audit
 
-      - name: Current date
-        id: date
-        run: echo "name=$(date -u)" >> "$GITHUB_OUTPUT"
+      - name: Check out the repo
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+
+      - name: Get data
+        id: data
+        run: |
+          echo "now=$(date -u)" >> "$GITHUB_OUTPUT"
+          echo "revision=$(git rev-parse --short=7 HEAD 2>/dev/null)" >> "$GITHUB_OUTPUT"
 
       - name: Docker meta
         id: meta
@@ -96,9 +101,6 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
-
-      - name: Check out the repo
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
@@ -126,10 +128,10 @@ jobs:
             annotation-index.maintainer=Claudio André (c) 2019-2023,\
             annotation-index.software=John the Ripper ${{ github.event.inputs.VERSION_NAME }},\
             annotation-index.org.opencontainers.image.authors=Claudio André <claudioandre.br at gmail com>,\
-            annotation-index.org.opencontainers.image.created=${{ steps.date.outputs.name }},\
+            annotation-index.org.opencontainers.image.created=${{ steps.data.outputs.now }},\
             annotation-index.org.opencontainers.image.description=John the Ripper is an Open Source password security auditing and password recovery tool. See https://www.openwall.com/john/,\
             annotation-index.org.opencontainers.image.licenses=GPL-2.0,\
-            annotation-index.org.opencontainers.image.revision=bleeding,\
+            annotation-index.org.opencontainers.image.revision=${{ steps.data.outputs.revision }},\
             annotation-index.org.opencontainers.image.source=https://github.com/openwall/john-packages,\
             annotation-index.org.opencontainers.image.title=John the Ripper CE Auditing Tool,\
             annotation-index.org.opencontainers.image.url=https://github.com/openwall/john-packages.git,\
