--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -133,9 +133,9 @@ jobs:
             annotation-index.org.opencontainers.image.description=John the Ripper is an Open Source password security auditing and password recovery tool. See https://www.openwall.com/john/,\
             annotation-index.org.opencontainers.image.licenses=GPL-2.0,\
             annotation-index.org.opencontainers.image.revision=${{ steps.data.outputs.revision }},\
-            annotation-index.org.opencontainers.image.source=https://github.com/openwall/john-packages,\
+            annotation-index.org.opencontainers.image.source=https://github.com/openwall/john-packages.git,\
             annotation-index.org.opencontainers.image.title=John the Ripper CE Auditing Tool,\
-            annotation-index.org.opencontainers.image.url=https://github.com/openwall/john-packages.git,\
+            annotation-index.org.opencontainers.image.url=https://github.com/openwall/john-packages,\
             annotation-index.org.opencontainers.image.vendor=Openwall,\
             annotation-index.org.opencontainers.image.version=${{ steps.data.outputs.version }}"
 
