maint: update greeting (job) policy
Update the greetings.yml output policy as recommended by the audit log.
Using the recommended policy.

Signed-off-by: Claudio André <claudioandre.br@gmail.com>

--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -38,7 +38,9 @@ jobs:
     - name: Harden Runner
       uses: step-security/harden-runner@eb238b55efaa70779f274895e782ed17c84f2895 # v2.6.1
       with:
-        egress-policy: audit
+        disable-sudo: true
+        egress-policy: block
+        allowed-endpoints: >
 
     - uses: actions/first-interaction@1dbfe1ba5525b8257e1f259b09745bee346d62d8 # v1.2.0
       with:
