maint: fix a node issue
Signed-off-by: Claudio André <claudioandre.br@gmail.com>

--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -30,7 +30,7 @@ permissions:
 
 jobs:
   greeting:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     permissions:
       issues: write
       pull-requests: write
