maint: fix greeting (job) policy
It's very restrictive after the previous merge. In some cases it accesses
the API and in others it doesn't (actually, I don't understand)?

Signed-off-by: Claudio André <claudioandre.br@gmail.com>

--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -41,6 +41,7 @@ jobs:
         disable-sudo: true
         egress-policy: block
         allowed-endpoints: >
+          api.github.com:443
 
     - uses: actions/first-interaction@34f15e814fe48ac9312ccf29db4e74fa767cbab7 # v1.3.0
       with:
