CI: use ubuntu-latest as host for solaris-vm
Signed-off-by: Claudio André <claudioandre.br@gmail.com>

--- a/deploy/Solaris-Delivery.yml
+++ b/deploy/Solaris-Delivery.yml
@@ -33,7 +33,7 @@ on:
 
 jobs:
   test:
-    runs-on: macos-12
+    runs-on: ubuntu-latest
     name: Solaris 11
     env:
       TARGET_ARCH: "SOLARIS"
